--- a/src/risk index.ipynb
+++ b/src/risk index.ipynb
@@ -2,16 +2,194 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3256bb7b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This application is used to convert notebook files (*.ipynb)"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook risk index.ipynb to html\n",
-      "[NbConvertApp] Writing 3702024 bytes to risk index.html\n"
+      "[NbConvertApp] WARNING | pattern 'risk index.ipynb' matched no files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        to various other formats.\n",
+      "\n",
+      "        WARNING: THE COMMANDLINE INTERFACE MAY CHANGE IN FUTURE RELEASES.\n",
+      "\n",
+      "Options\n",
+      "=======\n",
+      "The options below are convenience aliases to configurable class-options,\n",
+      "as listed in the \"Equivalent to\" description-line of the aliases.\n",
+      "To see all configurable class-options for some <cmd>, use:\n",
+      "    <cmd> --help-all\n",
+      "\n",
+      "--debug\n",
+      "    set log level to logging.DEBUG (maximize logging output)\n",
+      "    Equivalent to: [--Application.log_level=10]\n",
+      "--show-config\n",
+      "    Show the application's configuration (human-readable format)\n",
+      "    Equivalent to: [--Application.show_config=True]\n",
+      "--show-config-json\n",
+      "    Show the application's configuration (json format)\n",
+      "    Equivalent to: [--Application.show_config_json=True]\n",
+      "--generate-config\n",
+      "    generate default config file\n",
+      "    Equivalent to: [--JupyterApp.generate_config=True]\n",
+      "-y\n",
+      "    Answer yes to any questions instead of prompting.\n",
+      "    Equivalent to: [--JupyterApp.answer_yes=True]\n",
+      "--execute\n",
+      "    Execute the notebook prior to export.\n",
+      "    Equivalent to: [--ExecutePreprocessor.enabled=True]\n",
+      "--allow-errors\n",
+      "    Continue notebook execution even if one of the cells throws an error and include the error message in the cell output (the default behaviour is to abort conversion). This flag is only relevant if '--execute' was specified, too.\n",
+      "    Equivalent to: [--ExecutePreprocessor.allow_errors=True]\n",
+      "--stdin\n",
+      "    read a single notebook file from stdin. Write the resulting notebook with default basename 'notebook.*'\n",
+      "    Equivalent to: [--NbConvertApp.from_stdin=True]\n",
+      "--stdout\n",
+      "    Write notebook output to stdout instead of files.\n",
+      "    Equivalent to: [--NbConvertApp.writer_class=StdoutWriter]\n",
+      "--inplace\n",
+      "    Run nbconvert in place, overwriting the existing notebook (only \n",
+      "            relevant when converting to notebook format)\n",
+      "    Equivalent to: [--NbConvertApp.use_output_suffix=False --NbConvertApp.export_format=notebook --FilesWriter.build_directory=]\n",
+      "--clear-output\n",
+      "    Clear output of current file and save in place, \n",
+      "            overwriting the existing notebook.\n",
+      "    Equivalent to: [--NbConvertApp.use_output_suffix=False --NbConvertApp.export_format=notebook --FilesWriter.build_directory= --ClearOutputPreprocessor.enabled=True]\n",
+      "--no-prompt\n",
+      "    Exclude input and output prompts from converted document.\n",
+      "    Equivalent to: [--TemplateExporter.exclude_input_prompt=True --TemplateExporter.exclude_output_prompt=True]\n",
+      "--no-input\n",
+      "    Exclude input cells and output prompts from converted document. \n",
+      "            This mode is ideal for generating code-free reports.\n",
+      "    Equivalent to: [--TemplateExporter.exclude_output_prompt=True --TemplateExporter.exclude_input=True --TemplateExporter.exclude_input_prompt=True]\n",
+      "--allow-chromium-download\n",
+      "    Whether to allow downloading chromium if no suitable version is found on the system.\n",
+      "    Equivalent to: [--WebPDFExporter.allow_chromium_download=True]\n",
+      "--log-level=<Enum>\n",
+      "    Set the log level by value or name.\n",
+      "    Choices: any of [0, 10, 20, 30, 40, 50, 'DEBUG', 'INFO', 'WARN', 'ERROR', 'CRITICAL']\n",
+      "    Default: 30\n",
+      "    Equivalent to: [--Application.log_level]\n",
+      "--config=<Unicode>\n",
+      "    Full path of a config file.\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--JupyterApp.config_file]\n",
+      "--to=<Unicode>\n",
+      "    The export format to be used, either one of the built-in formats\n",
+      "            ['asciidoc', 'custom', 'html', 'latex', 'markdown', 'notebook', 'pdf', 'python', 'rst', 'script', 'slides', 'webpdf']\n",
+      "            or a dotted object name that represents the import path for an\n",
+      "            ``Exporter`` class\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--NbConvertApp.export_format]\n",
+      "--template=<Unicode>\n",
+      "    Name of the template to use\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--TemplateExporter.template_name]\n",
+      "--template-file=<Unicode>\n",
+      "    Name of the template file to use\n",
+      "    Default: None\n",
+      "    Equivalent to: [--TemplateExporter.template_file]\n",
+      "--writer=<DottedObjectName>\n",
+      "    Writer class used to write the \n",
+      "                                        results of the conversion\n",
+      "    Default: 'FilesWriter'\n",
+      "    Equivalent to: [--NbConvertApp.writer_class]\n",
+      "--post=<DottedOrNone>\n",
+      "    PostProcessor class used to write the\n",
+      "                                        results of the conversion\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--NbConvertApp.postprocessor_class]\n",
+      "--output=<Unicode>\n",
+      "    overwrite base name use for output files.\n",
+      "                can only be used when converting one notebook at a time.\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--NbConvertApp.output_base]\n",
+      "--output-dir=<Unicode>\n",
+      "    Directory to write output(s) to. Defaults\n",
+      "                                  to output to the directory of each notebook. To recover\n",
+      "                                  previous default behaviour (outputting to the current \n",
+      "                                  working directory) use . as the flag value.\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--FilesWriter.build_directory]\n",
+      "--reveal-prefix=<Unicode>\n",
+      "    The URL prefix for reveal.js (version 3.x).\n",
+      "            This defaults to the reveal CDN, but can be any url pointing to a copy \n",
+      "            of reveal.js. \n",
+      "            For speaker notes to work, this must be a relative path to a local \n",
+      "            copy of reveal.js: e.g., \"reveal.js\".\n",
+      "            If a relative path is given, it must be a subdirectory of the\n",
+      "            current directory (from which the server is run).\n",
+      "            See the usage documentation\n",
+      "            (https://nbconvert.readthedocs.io/en/latest/usage.html#reveal-js-html-slideshow)\n",
+      "            for more details.\n",
+      "    Default: ''\n",
+      "    Equivalent to: [--SlidesExporter.reveal_url_prefix]\n",
+      "--nbformat=<Enum>\n",
+      "    The nbformat version to write.\n",
+      "            Use this to downgrade notebooks.\n",
+      "    Choices: any of [1, 2, 3, 4]\n",
+      "    Default: 4\n",
+      "    Equivalent to: [--NotebookExporter.nbformat_version]\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      "\n",
+      "    The simplest way to use nbconvert is\n",
+      "\n",
+      "            > jupyter nbconvert mynotebook.ipynb --to html\n",
+      "\n",
+      "            Options include ['asciidoc', 'custom', 'html', 'latex', 'markdown', 'notebook', 'pdf', 'python', 'rst', 'script', 'slides', 'webpdf'].\n",
+      "\n",
+      "            > jupyter nbconvert --to latex mynotebook.ipynb\n",
+      "\n",
+      "            Both HTML and LaTeX support multiple output templates. LaTeX includes\n",
+      "            'base', 'article' and 'report'.  HTML includes 'basic' and 'full'. You\n",
+      "            can specify the flavor of the format used.\n",
+      "\n",
+      "            > jupyter nbconvert --to html --template lab mynotebook.ipynb\n",
+      "\n",
+      "            You can also pipe the output to stdout, rather than a file\n",
+      "\n",
+      "            > jupyter nbconvert mynotebook.ipynb --stdout\n",
+      "\n",
+      "            PDF is generated via latex\n",
+      "\n",
+      "            > jupyter nbconvert mynotebook.ipynb --to pdf\n",
+      "\n",
+      "            You can get (and serve) a Reveal.js-powered slideshow\n",
+      "\n",
+      "            > jupyter nbconvert myslides.ipynb --to slides --post serve\n",
+      "\n",
+      "            Multiple notebooks can be given at the command line in a couple of \n",
+      "            different ways:\n",
+      "\n",
+      "            > jupyter nbconvert notebook*.ipynb\n",
+      "            > jupyter nbconvert notebook1.ipynb notebook2.ipynb\n",
+      "\n",
+      "            or you can specify the notebooks list in a config file, containing::\n",
+      "\n",
+      "                c.NbConvertApp.notebooks = [\"my_notebook.ipynb\"]\n",
+      "\n",
+      "            > jupyter nbconvert --config mycfg.py\n",
+      "\n",
+      "To see all available configurables, use `--help-all`.\n",
+      "\n"
      ]
     }
    ],
@@ -344,20 +522,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d357cfa9",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Usuario\\anaconda3\\envs\\tftimeseriesII\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\Usuario\\anaconda3\\envs\\tftimeseriesII\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "c:\\Users\\Usuario\\anaconda3\\envs\\tftimeseriesII\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -651,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "813e6489",
    "metadata": {},
    "outputs": [
@@ -915,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6c6fb394",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d96fe1ea",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "72366cfe",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b5626ca9",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "51fa993c",
    "metadata": {},
    "outputs": [
@@ -2214,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2b466296",
    "metadata": {},
    "outputs": [
@@ -2628,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3d3e5e81",
    "metadata": {},
    "outputs": [
@@ -3634,7 +3802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "964171df",
    "metadata": {},
    "outputs": [
@@ -4306,7 +4474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "35466850",
    "metadata": {},
    "outputs": [
@@ -4915,7 +5083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "80894250",
    "metadata": {},
    "outputs": [
@@ -5071,7 +5239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "18b34604",
    "metadata": {},
    "outputs": [
@@ -5210,7 +5378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "848b375c",
    "metadata": {},
    "outputs": [
@@ -5415,7 +5583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e5d7e3de",
    "metadata": {},
    "outputs": [
@@ -5520,7 +5688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8a08ee2a",
    "metadata": {},
    "outputs": [
@@ -5667,7 +5835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d3990407",
    "metadata": {},
    "outputs": [
@@ -5862,7 +6030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "2064af64",
    "metadata": {},
    "outputs": [
@@ -6091,7 +6259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "0a58ecdc",
    "metadata": {},
    "outputs": [
@@ -6195,7 +6363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "b79054ff",
    "metadata": {},
    "outputs": [
@@ -6345,7 +6513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "19c1f6e9",
    "metadata": {},
    "outputs": [
@@ -6757,7 +6925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "72f410e7",
    "metadata": {},
    "outputs": [
