Arreglar carácter Unicode en tabla de errores por trimestre

--- a/replica_pavia_2018/tex/tabla_errores_trimestre.tex
+++ b/replica_pavia_2018/tex/tabla_errores_trimestre.tex
@@ -18,6 +18,6 @@ Q4 & -0,0410 & 0,1964 & 0,2004 & 0,1141 & 29 \\
 \footnotesize
 \item Nota: EM = Error Medio, EAM = Error Absoluto Medio, DT = Desviación Típica, MAD = Desviación Absoluta Mediana.
 \item Los errores están expresados en puntos porcentuales de las tasas de crecimiento interanuales.
-\item El patrón Q4 ≈ Q3 < Q1 confirma los hallazgos de Pavia et al. (2017).
+\item El patrón Q4 $\approx$ Q3 < Q1 confirma los hallazgos de Pavia et al. (2017).
 \end{tablenotes}
 \end{table}
