Arreglar paper principal: incluir nueva tabla y corregir referencias

--- a/replica_pavia_2018/tex/paper_replicacion_pavia.tex
+++ b/replica_pavia_2018/tex/paper_replicacion_pavia.tex
@@ -97,22 +97,7 @@ La literatura sobre incertidumbre económica, particularmente \citet{bloom2009} 
 
 Seguimos estrictamente la metodología de \citet{pavia2017} para asegurar la comparabilidad directa de resultados. La tabla \ref{tab:metodologia_comparacion} presenta la correspondencia exacta entre el enfoque original y nuestra implementación.
 
-\begin{table}[h]
-\centering
-\caption{Comparación Metodológica: Pavia et al. (2017) vs. Nuestra Replicación}
-\label{tab:metodologia_comparacion}
-\begin{tabular}{lcc}
-\toprule
-\textbf{Aspecto} & \textbf{Pavia et al. (2017)} & \textbf{Nuestra Replicación} \\
-\midrule
-Fuente de datos & CNTR del INE & ✓ CNTR del INE \\
-Variable & PIB trimestral & ✓ PIB trimestral \\
-Transformación & Niveles → Tasas interanuales & ✓ Niveles → Tasas interanuales \\
-Período base & 2005-2016 & ✓ 2005-2016 + extensión \\
-Metodología & A0 vs DEF & ✓ A0 vs DEF \\
-\bottomrule
-\end{tabular}
-\end{table}
+\input{tabla_metodologia_comparacion.tex}
 
 \subsection{Definición de Vintages y Cálculo de Errores}
 
